--- a/src/components/Register/Agree/AddressSelector.module.css
+++ b/src/components/Register/Agree/AddressSelector.module.css
@@ -40,8 +40,6 @@
   z-index: 10;
   -ms-overflow-style: none; /* 인터넷 익스플로러 */
   scrollbar-width: none; /* 파이어폭스 */
-
-  z-index: 10;
 }
 
 .dropdown:-webkit-scrollbar {
