--- a/src/components/Register/BottomBlurBox.module.css
+++ b/src/components/Register/BottomBlurBox.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 4.6rem;
-  margin-bottom: 12.8rem;
   width: 100%;
   max-width: 560px;
   border-radius: 24px;
@@ -12,6 +11,7 @@
     0px 0px 80px 0px rgba(255, 255, 255, 0.24) inset;
   backdrop-filter: blur(10px);
   padding: 4.8rem 6rem;
+  z-index: 1;
 }
 
 .form {
